--- a/api/shuttle/Cargo.toml
+++ b/api/shuttle/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.3.1"
-shuttle-actix-web = "0.25.0"
+axum = "0.6.18"
+shuttle-axum = "0.25.0"
 shuttle-runtime = "0.25.0"
-tokio = "1.26.0"
+tokio = "1.28.2"
