--- a/api/shuttle/Cargo.toml
+++ b/api/shuttle/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+api-lib = { path = "../lib" }
 axum = "0.6.18"
 shuttle-axum = "0.25.0"
 shuttle-runtime = "0.25.0"
