--- a/api/shuttle/Cargo.toml
+++ b/api/shuttle/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 api-lib = { path = "../lib" }
 axum = "0.6.18"
+reqwest = { version = "0.11.20", features = ["cookie_store", "cookies", "tokio-rustls"] }
 shuttle-axum = "0.25.0"
 shuttle-runtime = "0.25.0"
 shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls", "sqlx"] }
