--- a/api/lib/Cargo.toml
+++ b/api/lib/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.20"
-sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
-tracing = "0.1.37"
+axum = { workspace = true }
+sqlx = { workspace = true }
+tracing = { workspace = true }
