--- a/api/shuttle/Cargo.toml
+++ b/api/shuttle/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-api-lib = { path = "../lib" }
-axum = "0.6.18"
-reqwest = { version = "0.11.20", features = ["cookie_store", "cookies", "tokio-rustls"] }
-shuttle-axum = "0.25.0"
-shuttle-runtime = "0.25.0"
-shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls", "sqlx"] }
-sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
-tokio = "1.28.2"
+api-lib = { workspace = true }
+axum = { workspace = true }
+reqwest = { workspace = true }
+shuttle-axum = { workspace = true }
+shuttle-runtime = { workspace = true }
+shuttle-shared-db = { workspace = true }
+sqlx = { workspace = true }
+tokio = { workspace = true }
