--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
 resolver = "1"
 
 [workspace.dependencies]
+anyhow = "1.0.75"
 api-lib = { path = "./api/lib" }
 axum = "0.6.20"
 reqwest = { version = "0.11.20", features = ["cookie_store", "cookies", "tokio-rustls"] }
@@ -18,4 +19,5 @@ shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls", "sqlx"]
 shuttle-static-folder = "0.25.0"
 sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
 tokio = { version = "1.28.2", features = ["fs", "tracing"] }
+tower-http = { version = "0.4.4", features = ["tracing", "tokio"] }
 tracing = "0.1.37"
