--- a/api/shuttle/Cargo.toml
+++ b/api/shuttle/Cargo.toml
@@ -4,11 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = { workspace = true }
 api-lib = { workspace = true }
 axum = { workspace = true }
 reqwest = { workspace = true }
 shuttle-axum = { workspace = true }
 shuttle-runtime = { workspace = true }
+shuttle-secrets = { workspace = true }
 shuttle-shared-db = { workspace = true }
+shuttle-static-folder = { workspace = true }
 sqlx = { workspace = true }
 tokio = { workspace = true }
+tower-http = { version = "0.4.4", features = ["fs"] }
+tracing = { workspace = true }
