--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "api/lib",
     "api/shuttle",
+    "front",
     "shared"
 ]
 resolver = "1"
@@ -9,8 +10,13 @@ resolver = "1"
 [workspace.dependencies]
 anyhow = "1.0.75"
 api-lib = { path = "./api/lib" }
+async-trait = "0.1.74"
 axum = "0.6.20"
-reqwest = { version = "0.11.20", features = ["cookie_store", "cookies", "tokio-rustls"] }
+dioxus = "0.4.0"
+dioxus-web = "0.4.0"
+reqwest = { version = "0.11.20", features = ["cookie_store", "cookies", "json", "tokio-rustls"] }
+serde = { version = "1.0.189", features = ["derive"]}
+serde_json = "1.0.107"
 shuttle-axum = "0.25.0"
 shuttle-runtime = "0.25.0"
 shuttle-secrets = "0.25.0"
@@ -19,5 +25,7 @@ shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls", "sqlx"]
 shuttle-static-folder = "0.25.0"
 sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
 tokio = { version = "1.28.2", features = ["fs", "tracing"] }
-tower-http = { version = "0.4.4", features = ["tracing", "tokio"] }
+tower-http = { version = "0.4.4", features = ["fs", "tracing", "tokio"] }
 tracing = "0.1.37"
+tracing-subscriber = "0.3.17"
+uuid = { version = "1.5.0", features = ["js", "v4"] }
