--- a/api/lib/Cargo.toml
+++ b/api/lib/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = { workspace = true }
 axum = { workspace = true }
+shared = { path = "../../shared", features = ["backend"] }
 sqlx = { workspace = true }
 tracing = { workspace = true }
+uuid = { workspace = true }
