--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde.workspace = true
+sqlx = { workspace = true, optional = true }
+uuid = { workspace = true, features = ["serde"] }
+
+[features]
+backend = ["sqlx"]
