--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,17 @@ resolver = "1"
 anyhow = "1.0.75"
 api-lib = { path = "./api/lib" }
 async-trait = "0.1.74"
-axum = "0.6.20"
+axum = { version = "0.6.20", features = ["tracing", "macros", "headers"] }
+axum-server = { version = "0.5.1", features = ["tokio-rustls"] }
 dioxus = "0.4.0"
 dioxus-web = "0.4.0"
+dotenvy = "0.15.7"
+fake = { version = "2.9.1", features = ["uuid", "serde_json", "derive"] }
+nom = "7.1.3"
 reqwest = { version = "0.11.20", features = ["cookie_store", "cookies", "json", "tokio-rustls"] }
+secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.189", features = ["derive"]}
+serde-aux = "4.2.0"
 serde_json = "1.0.107"
 shuttle-axum = "0.25.0"
 shuttle-runtime = "0.25.0"
@@ -25,6 +31,7 @@ shuttle-shared-db = { version = "0.25.0", features = ["postgres-rustls", "sqlx"]
 shuttle-static-folder = "0.25.0"
 sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
 tokio = { version = "1.28.2", features = ["fs", "tracing"] }
+tower = { version = "0.4.13", features = ["tracing", "tokio"] }
 tower-http = { version = "0.4.4", features = ["fs", "tracing", "tokio"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
